some alignment fixes

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
 	margin: 1em;
 	background-color: rgb(30, 60, 90);
 }
+
 .transparent-button {
 	padding: 0.3em 0.7em 0.3em 0.7em;
 	border-radius: 4%;
@@ -24,11 +25,14 @@
 }
 #logo {
 	margin: 1em;
+	display: inline-block;
 }
 #nav-head{
+	display: inline-block;
 	font-family: sans-serif;
 	color: white;
 	text-decoration: none;
+	margin-top: 35px;
 }
 
 #nav-links {
@@ -62,6 +66,7 @@
 
 #head-buttons {
 	text-align: center;
+	margin-bottom: 0.01em;
 }
 
 #download-section {
@@ -69,6 +74,7 @@
 }
 
 .download-button {
+	display: inline-block;
 	margin-top: 0px;
 	padding: 0.1em 0em 0.1em 0em;
 	background-color: rgb(255, 0, 67);
@@ -94,7 +100,8 @@
 }
 
 #version {
-	margin-top: 0.5em;
+	margin-top: 1px;
+	margin-left: 33em;
 	color: rgb(60, 115, 130);
 	font-family: sans-serif;
 	font-size: 14px;
@@ -115,6 +122,7 @@
 	border-radius: 5%;
 	border-color: rgb(60, 120, 144);
 	border-width: 2px;
+	display: inline-block;
 }
 
 .video-button:hover {
@@ -122,6 +130,7 @@
 }
 
 .video-button p {
+	margin: 0.3em;
 	color: white;
 	font-size: 1.7em;
 	font-weight: bold;
@@ -256,6 +265,7 @@
 
 .download-b button {
 	padding: 0.7em 1.5em 0.7em 1.5em;
+	margin-top: 9em;
 	color: white;
 	font-family: sans-serif;
 	font-weight: bold;
